[package]
name = "zenchi-kun"
version = "0.1.0"
authors = [ "misonomi <misonomi0612@gmail.com>" ]
edition = "2018"

[dependencies.serenity]
    default-features = false
    features = [
        "builder",
        "client",
        "framework",
        "gateway",
        "http",
        "model",
        "standard_framework",
        "utils",
        "rustls_backend",
    ]
    version = "0.9.0-rc.4"

[dependencies.tokio]
    features = [
        "macros",
    ]
    version = "0.2"

[dependencies]
postgres = "*"
